Fix: Random spacing removed.

--- a/src/dataexplorer/dataexplorer-application/src/components/Patient/PatientQuestionnaireResponses/PatientQuestionnaire/PatientView/PatientView.style.scss
+++ b/src/dataexplorer/dataexplorer-application/src/components/Patient/PatientQuestionnaireResponses/PatientQuestionnaire/PatientView/PatientView.style.scss
@@ -36,6 +36,9 @@
                 margin-left: 1.6rem;
                 font-size: 1.25rem;
             }
+            .unavailable-content {
+                margin-left: 0;
+            }
         }
         .info-right {
             p {
